<resources>

    <!--    Titles -->
    <string name="app_name">DecheTri</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_flux">Annonces</string>
    <string name="title_map">Carte</string>
    <string name="title_report">Signalement</string>
    <string name="title_photo">Signalement - Photo</string>
    <string name="title_location">Signalement - Position</string>
    <string name="title_details">Signalement - Détails</string>
    <string name="title_stat">Statistiques</string>
    <string name="title_tasklist">Liste de tâches</string>
    <string name="title_unassignedtasklist">Tâche libres</string>
    <string name="title_disconnect">Se déconnecter</string>

    <!--    WasteDialog Fragment-->
    <string name="itinerary">Itinéraire</string>
    <string name="confirm_ramassage">Confirmer le ramassage</string>
    <string name="delete_waste">Supprimer ce signalement</string>
    <string name="placeholder">placeholder</string>
    <string name="nobody">-- Personne --</string>
    <string name="title_deletion_waste_popup">Confirmation de suppression</string>
    <string name="message_deletion_waste_popup">Etes-vous sur de vouloir supprimer ce signalement ? Ne le supprimer que s\'il n\'est pas sérieux, offensant ou hors de portée.</string>
    <string name="delete_waste_popup_button">Supprimer</string>
    <string name="keep_waste_popup_button">Conserver</string>

    <!--    RoleChoice Activity-->
    <string name="role_choice_title">Choix du rôle d\'utilisation de l\'application</string>
    <string name="role_user_title">Utilisateur</string>
    <string name="role_user_id">1</string>
    <string name="role_employee_title">Employé</string>
    <string name="role_employee_id">2</string>
    <string name="role_manager_title">Manager</string>
    <string name="role_manager_id">3</string>
    <string name="role_admin_title">Administrateur</string>
    <string name="role_admin_id">4</string>

    <!--    AlertDialog    -->
    <string name="alert_disconnect_title">Déconnexion</string>
    <string name="alert_disconnect_message">Voulez-vous vraiment vous déconnecter ?</string>
    <string name="alert_disconnect_yes">Se déconnecter</string>
    <string name="alert_disconnect_no">Rester connecté</string>
    <string name="alert_delete_title">Supprimer</string>
    <string name="alert_delete_message">Etes vous sur de vouloir supprimer ce message ?</string>
    <string name="alert_delete_yes">Supprimer</string>
    <string name="alert_delete_no">Conserver</string>

    <!--    SharedPreferences -->
    <string name="shared_preferences_file_key">shared_preferences</string>
    <string name="default_role">user</string>
    <string name="shared_preferences_key_role">role</string>
    <string name="shared_preferences_key_user_id">userId</string>
    <string name="default_id">0</string>

    <!--    Flux    -->
    <string name="bin_image">bin image</string>

    <!--    NewAnnouncementFragmentDialog    -->
    <string name="bn_add_annoucement">Le bouton pour publier une nouvelle annonce</string>
    <string name="add_announcement_title">Nouvelle annonce</string>
    <string name="remove_date_text">Enlever la date</string>
    <!--    <string name="add_date_text">Ajouter une date</string>-->
    <string name="required_symbol">*</string>
    <string name="add_announcement_input_title">Titre</string>
    <string name="add_announcement_hint_title">Titre bref de l\'annonce</string>
    <string name="add_announcement_input_description">Description</string>
    <string name="add_announcement_hint_description">Contenu de l\'annonce</string>
    <string name="add_announcement_add_a_date">Ajouter une date</string>
    <string name="add_announcement_event_date">Date de l\'évènement</string>
    <string name="add_announcement_help_date">Ajouter une date à votre annonce pour en faire un évènement ou laissez vide pour publier une annonce.</string>
    <string name="add_announcement_help_button">OK</string>
    <string name="add_announcement_publish">Publier</string>
    <string name="add_announcement_cancel">Annuler</string>
    <string name="add_announcement_result_success">Annonce publiée avec succès.</string>
    <string name="remove_announcement_result_success">Annonce supprimée avec succès.</string>
    <string name="add_announcement_result_error">Erreur lors de la publication de l\'annonce.</string>

    <string name="waste_image">Image du déchet</string>
    <string name="votre_position">Votre position</string>
    <string name="dechet_ici">Déchet ici</string>
    <string name="veuillez_activer_la_localisation">Veuillez activer la localisation puis réessayer</string>
    <string name="la_localisation_est_necessaire">La localisation est nécessaire pour signaler le déchet</string>
    <string name="nouveau_dechet">Nouveau déchet</string>
    <string name="btn_refresh_waste_point">Met à jour les points sur la map</string>
    <string name="waste_type">Type :</string>
    <string name="waste_assigned_to">Tâche assignée à :</string>
    <string name="waste_address">Adresse :</string>
    <string name="envoyer_le_signalement">Envoyer le signalement</string>
    <string name="image_du_d_chet">Image du déchet</string>
    <string name="lat_long">Lat : , Long :</string>
    <string name="saisir_la_localisation">Saisir la localisation…</string>
    <string name="localisation">Localisation</string>
    <string name="saisir_une_description">Saisir une description…</string>
    <string name="description">Description</string>
    <string name="type_spinner_title">Type de déchet</string>
    <string name="saisir_le_nom">Saisir le nom …</string>
    <string name="identification_du_d_chet">Identification du déchet</string>
    <string name="logo_activites">logo activités</string>
    <string name="statisticsPieChart">Proportion d\'annonces en fonction de leur type.</string>
    <string name="statisticsBarChart">Nombre de déchets signalés au cours du temps.</string>
    <string name="logo_signalement">logo signalement</string>
    <string name="add_announcement_button">Publier une annonce</string>
    <string name="clear_date">The button to clear the date input</string>
<!--    Toast resources -->
    <string name="erreur_lors_de_la_recuperation_des_annonces">Erreur lors de la récupération des annonces, Vérifiez votre connexion internet et réessayez</string>
    <string name="erreur_lors_de_la_recuperation_des_taches">Erreur lors de la récupération des tâches</string>
    <string name="erreur_lors_de_la_suppression_de_l_annonce">Erreur lors de la suppression de l\'\'annonce, Vérifiez votre connexion internet et réessayez</string>
    <string name="imposible_de_recuperer_la_liste_des_dechets">Imposible de récupérer la liste des déchets</string>
    <string name="impossible_de_recuperer_l_adresse">Impossible de récupérer l\'adresse</string>
    <string name="permission_du_calendrier_refusee">Permission du calendrier refusée, Veuillez réessayer</string>
    <string name="erreur_lors_de_la_publication_de_l_annonce">Erreur lors de la publication de l\'\'annonce, Vérifiez votre connexion internet et réessayez</string>
    <string name="tache_terminee">Tâche terminée</string>
    <string name="erreur_lors_de_la_completion_de_la_tache">Erreur lors de la complétion de la tâche, Vérifiez votre connexion internet et réessayez</string>
    <string name="erreur_lors_de_la_recuperation_des_utilisateurs">Erreur lors de la récupération des utilisateurs, Vérifiez votre connexion internet et réessayez</string>
    <string name="erreur_lors_de_l_assignation_de_la_tache">Erreur lors de l\'\'assignation de la tâche, Vérifiez votre connexion internet et réessayez</string>
    <string name="la_tache_a_ete_assignee_avec_succes">La tâche a été assignée avec succès</string>
    <string name="erreur_lors_de_la_suppression_du_dechet">Erreur lors de la suppression du déchet, Vérifiez votre connexion internet et réessayez</string>
    <string name="dechet_supprime_avec_succes">Déchet supprimé avec succès.</string>
    <string name="aucune_image_selectionnee">Aucune image sélectionnée, Veuillez réessayer</string>
    <string name="aucune_photo_capturee">Aucune photo capturée, Veuillez réessayer</string>
    <string name="permission_de_la_camera_refusee">Permission de la caméra refusée, Veuillez réessayer</string>
    <string name="permission_de_la_pellicule_refusee">Permission de la pellicule refusée, Veuillez réessayer</string>
    <string name="permission_refusee">Permission refusée</string>
    <string name="l_application_de_l_appareil_photo_n_est_pas_disponible">L\'application de l\'appareil photo n\'est pas disponible, Veuillez réessayer</string>
    <string name="l_application_de_galerie_n_est_pas_disponible">L\'application de galerie n\'est pas disponible, Veuillez réessayer</string>
    <string name="erreur_lors_de_la_recuperation_des_dechets">Erreur lors de la récupération des déchets</string>
    <string name="dechet_signale">Déchet signalé</string>
    <string name="aucune_tache_assignee">Aucune tâche assignée.</string>

    <!--    Notifications    -->
    <string name="send_notification_error">L\'envoie de la notification a rencontré une erreur</string>
    <string name="create_announcement">Création d\'une annonce</string>
    <string name="delete_announcement">Suppression d\'une announcement</string>
    <string name="itinerary_confirmation">Confirmation de l\'itinéraire</string>
    <string name="error_completing_task">Erreur lors de la complétion de la tâche</string>
    <string name="error_deleting_task">Erreur lors de la suppression de la tâche</string>
    <string name="waste_successfully_deleted">Déchet supprimé avec succès</string>
    <string name="waste_report_with_success">Déchet signalé avec succès</string>
</resources>
