<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_flux"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_flux" />

    <item
        android:id="@+id/navigation_taskList"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_tasklist" />

    <item
        android:id="@+id/navigation_statistics"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_stat" />

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_map" />

    <item
        android:id="@+id/navigation_report"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_report" />

</menu>