<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_taskList">

    <fragment
        android:id="@+id/navigation_flux"
        android:name="etu.seinksansdoozebank.dechetri.ui.flux.FluxFragment"
        android:label="@string/title_flux"
        tools:layout="@layout/fragment_flux" />

    <fragment
        android:id="@+id/navigation_statistics"
        android:name="etu.seinksansdoozebank.dechetri.ui.statistics.StatisticsFragment"
        android:label="@string/title_stat"
        tools:layout="@layout/fragment_statistics" />

    <fragment
        android:id="@+id/navigation_taskList"
        android:name="etu.seinksansdoozebank.dechetri.ui.taskslist.TasksListFragment"
        android:label="@string/title_tasklist"
        tools:layout="@layout/fragment_tasks_list" />

    <fragment
        android:id="@+id/navigation_map"
        android:name="etu.seinksansdoozebank.dechetri.ui.wastemap.WasteMapFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_waste_map" />

    <fragment
        android:id="@+id/navigation_report"
        android:name="etu.seinksansdoozebank.dechetri.ui.wastereport.WasteReportFragment"
        android:label="@string/title_report"
        tools:layout="@layout/fragment_waste_report" />

</navigation>