<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_flux">

    <fragment
        android:id="@+id/navigation_flux"
        android:name="etu.seinksansdoozebank.dechetri.ui.flux.FluxFragment"
        android:label="@string/title_flux"
        tools:layout="@layout/fragment_flux" />

    <fragment
        android:id="@+id/navigation_map"
        android:name="etu.seinksansdoozebank.dechetri.ui.wastemap.WasteMapFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_waste_map" />

    <fragment
        android:id="@+id/navigation_report"
        android:name="etu.seinksansdoozebank.dechetri.ui.wastereport.WasteReportFragment"
        android:label="@string/title_report"
        tools:layout="@layout/fragment_waste_report" >
        <action
            android:id="@+id/action_navigation_report_to_navigation_location_choice"
            app:destination="@id/navigation_location_choice" />
    </fragment>
    <fragment
        android:id="@+id/navigation_waste_detail_report"
        android:name="etu.seinksansdoozebank.dechetri.ui.wastereport.WasteDetailsReportFragment"
        android:label="WasteDetailReport"
        tools:layout="@layout/fragment_waste_details_report" />
    <fragment
        android:id="@+id/navigation_location_choice"
        android:name="etu.seinksansdoozebank.dechetri.ui.wastereport.LocationChoiceFragment"
        android:label="LocationChoice"
        tools:layout="@layout/fragment_location_choice" >
        <action
            android:id="@+id/action_navigation_location_choice_to_navigation_waste_detail_report"
            app:destination="@id/navigation_waste_detail_report" />
    </fragment>
</navigation>