<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipeRefreshLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="15dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    tools:context=".ui.statistics.StatisticsFragment">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.statistics.StatisticsFragment"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_campaign_24"
                android:layout_marginEnd="20dp"
                android:contentDescription="@string/logo_activites" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/statisticsPieChart"
                android:textSize="18sp" />
        </LinearLayout>

        <org.eazegraph.lib.charts.PieChart
            android:id="@+id/piechart"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_height="300dp"
            android:padding="8dp"
            app:egLegendTextSize="20sp"
            app:egUsePieRotation="true"
            app:egValueTextSize="36sp"
            tools:ignore="MissingConstraints" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_flag_24"
                android:layout_marginEnd="20dp"
                android:contentDescription="@string/logo_signalement" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/statisticsBarChart"
                android:textSize="18sp" />

       </LinearLayout>


        <org.eazegraph.lib.charts.ValueLineChart
            android:id="@+id/cubiclinechart"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_height="300dp"
            app:egUseCubic="true"
            app:egUseOverlapFill="true"
            app:egCurveSmoothness="0.4"
            app:egIndicatorLineColor="#EA7E19"
            app:egLegendHeight="40dp"
            app:egShowStandardValue="true"
            android:layout_marginBottom="10dp"
            />



    </LinearLayout>


</ScrollView>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>